@@ -1,15 +1,28 @@
 # hello-clojure
 
-## Getting Started
+## Basic Start
 
 1. Start the REPL
-2. Load and evaluate the `components.clj` file
-3. Start the server - execute `ready-steady-go` function
-4. Go to [http://localhost:7171/hello?name=YourNameHere](http://localhost:7171/hello?name=Carol) to see: `Hello, {name}!`
+2. Run the transactor (follow steps at Running with Datomic)
+3. Load and evaluate the `components.clj` file
+4. Start the server by executing the `ready-steady-go` function
+5. Go to [http://localhost:7171/hello?name=YourNameHere](http://localhost:7171/hello?name=Carol) to see: `Hello, {name}!`
+
+#### Running with Datomic
+1 - Follow the tutorials below:
+[Local Setup](https://docs.datomic.com/setup/setup.html) 
+[Run a Transactor](https://docs.datomic.com/peer-tutorial/transactor.html)
+O transactor pode ser iniciado (started) com logs da seguinte forma:
+*~/dev/datomic-pro-1.0.7075/bin/transactor -Ddatomic.printConnectionInfo=true -verbose:gc -Xlog:gc config/samples/dev-transactor-template.properties*
+
+2 - Para usar a interface grafica do Datomic use o comando: 
+*~/dev/datomic-pro-1.0.7075/bin/console -p 8080 dev datomic:dev://localhost:4334/*
+[Veja Starting the Console](https://docs.datomic.com/resources/console.html)
+
 
 Alternatively you can run the test-request functions provided.
 
-### Task 1:
+## Task 1:
 - Create a Clojure WebApp
 - Create a server
 - Create a /hello route
@@ -30,7 +43,7 @@ Alternatively you can run the test-request functions provided.
 
 
 
-### Question:
+## Question:
 
 - Which server is best for this task?
 Jetty 11 is the default container used with Pedestal. I decided to use Pedestal because it is the web framework must used at Nubank services.
@@ -38,7 +51,7 @@ Jetty 11 is the default container used with Pedestal. I decided to use Pedestal 
 Jetty provides a web server and servlet container, additionally providing support for HTTP/2, WebSocket, OSGi, JMX, JNDI, JAAS and many other integrations. (and I have no idea of what 98% of this sentence means ⚠️)
 
 
-### Task 2:
+## Task 2:
 
 - [x] Create an user with name / surname / age / id (handle UUID)
 (atom)
@@ -58,7 +71,7 @@ Nice to have:
 - [x] Params via query params to search for users in the list 
 
 
-### Task 3:
+## Task 3:
 Let's create a digital bank
 - [x] Entity User wants to open a bank account (entity account)
 - [x] Endpoint post to create account (users/id/accounts) - id via path and account via req-body
@@ -72,14 +85,14 @@ Nice to have
 - [ ] query da poupanca os depositos de um periodo (still no deposits)
 - [ ] MGM bonus deposit of 100 when creating 
 
-### Task 4:
+## Task 4:
 - [+/-] Criar testes de integração para validar o retorno e status code dos endpoints
 - [x] Criar namespace para testes de integração
 - [x] Criar comando no lein para rodar os testes de integração
 - [x] Usar o io.pedestal.test
 
 
-### Task 5:
+## Task 5:
 - [x] Refatorar codigo para fazer uso de componentes
 - [x] https://github.com/thalfm/clojure-hex
 - Vamos criar o system-map no repl - Adicionar apenas db
@@ -114,7 +127,7 @@ Controller ainda nao esta acessando os componentes. (usar main)
 }
 
 
-### Task 6:
+## Task 6:
 - [x] Use diplomat arch 
 - [x] Use schemas 
 - [x] Criar interceptor do server 
@@ -127,20 +140,10 @@ mapear o que vem da minha request
 GET nao faz parte
 
 
-### Task 7:
+## Task 7:
 - [ ] Refatorar tudo para utilizar a arquitetura atual
 - [ ] Apontar pros e contras da atual arquitetura que estamos usando agora em comparação à anterior
 - [ ] Refatorar testes de integração 
 - [ ] Criar testes unitarios (logic and adapters)
 
 
-#### Usando Datomic
-1 - Siga os tutoriais
-[Local Setup](https://docs.datomic.com/setup/setup.html) 
-[Run a Transactor](https://docs.datomic.com/peer-tutorial/transactor.html)
-Para obter logs o transactor pode ser iniciado (started) da seguinte forma:
-```~/dev/datomic-pro-1.0.7075/bin/transactor -Ddatomic.printConnectionInfo=true config/samples/dev-transactor-template.properties```
-
-Para usar a interface grafica use o comando: 
-bin/console -p 8080 dev datomic:dev://localhost:4334/
-[Veja Starting the Console](https://docs.datomic.com/resources/console.html)
